[gd_scene load_steps=15 format=3 uid="uid://bsnu6mh4fq3eg"]

[ext_resource type="Script" path="res://Scripts/Game/NPCs/dima.gd" id="1_2y3ej"]
[ext_resource type="Texture2D" uid="uid://qpvtjvynpgxm" path="res://Art/Character/NPS's/all male.png" id="1_h3u5p"]

[sub_resource type="Animation" id="Animation_6nh3c"]
resource_name = "idle_down"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 0)]
}

[sub_resource type="Animation" id="Animation_b05o0"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 0)]
}

[sub_resource type="Animation" id="Animation_1mktp"]
resource_name = "idle_left"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(1, 0)]
}

[sub_resource type="Animation" id="Animation_c5ap4"]
resource_name = "idle_up"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(2, 0)]
}

[sub_resource type="Animation" id="Animation_3341i"]
resource_name = "idle_right"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(3, 0)]
}

[sub_resource type="Animation" id="Animation_2i2qk"]
resource_name = "walk_down"
length = 0.8
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(4, 0), Vector2i(5, 0), Vector2i(6, 0), Vector2i(7, 0)]
}

[sub_resource type="Animation" id="Animation_nnquc"]
resource_name = "walk_up"
length = 0.8
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(8, 0), Vector2i(9, 0), Vector2i(10, 0), Vector2i(11, 0)]
}

[sub_resource type="Animation" id="Animation_xmcel"]
resource_name = "walk_left"
length = 0.8
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(12, 0), Vector2i(13, 0), Vector2i(14, 0), Vector2i(15, 0)]
}

[sub_resource type="Animation" id="Animation_mnkka"]
resource_name = "walk_right"
length = 0.8
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(16, 0), Vector2i(17, 0), Vector2i(18, 0), Vector2i(19, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_s8204"]
_data = {
"RESET": SubResource("Animation_b05o0"),
"idle_down": SubResource("Animation_6nh3c"),
"idle_left": SubResource("Animation_1mktp"),
"idle_right": SubResource("Animation_3341i"),
"idle_up": SubResource("Animation_c5ap4"),
"walk_down": SubResource("Animation_2i2qk"),
"walk_left": SubResource("Animation_xmcel"),
"walk_right": SubResource("Animation_mnkka"),
"walk_up": SubResource("Animation_nnquc")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0y0ar"]
size = Vector2(12, 5)

[sub_resource type="CircleShape2D" id="CircleShape2D_3tm72"]
radius = 27.0

[node name="Dima" type="CharacterBody2D"]
y_sort_enabled = true
script = ExtResource("1_2y3ej")

[node name="Sprite2D" type="Sprite2D" parent="."]
z_index = 1
y_sort_enabled = true
position = Vector2(1, 0)
texture = ExtResource("1_h3u5p")
offset = Vector2(0, -14)
hframes = 20
region_enabled = true
region_rect = Rect2(0, 0, 640, 32)

[node name="Animation" type="AnimationPlayer" parent="Sprite2D"]
libraries = {
"": SubResource("AnimationLibrary_s8204")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -1.5)
shape = SubResource("RectangleShape2D_0y0ar")

[node name="Navigation" type="Node2D" parent="."]

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="Navigation"]

[node name="RecalcTimer" type="Timer" parent="Navigation"]
wait_time = 0.1
autostart = true

[node name="Area2D" type="Area2D" parent="."]

[node name="pupupu" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-1, -3)
shape = SubResource("CircleShape2D_3tm72")

[connection signal="timeout" from="Navigation/RecalcTimer" to="." method="_on_recalc_timer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
